deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-report
  namespace: kube-prometheus-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-report
  template:
    metadata:
      labels:
        app: grafana-report
    spec:
      containers:
        - name: grafana-report
          image: rkeller84/grafanareporter:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-report
  namespace: kube-prometheus-stack
spec:
  selector:
    app: grafana-report
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-report
  namespace: kube-prometheus-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-reporter.ssh.cluster   # 🔹 change to your real domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-report
                port:
                  number: 8000
